SVY-18161 Stateless Login - Deprecate Groups / enable Permissions
deprecated all methods with "group" in the name
added for most the permissions, except the mutation of "groups" itself